updated all files

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "id": "8a228c49",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "id": "9f74af6b",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "id": "f8cdf403",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "id": "6ecb5805",
    "metadata": {},
    "outputs": [],
@@ -112,55 +112,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "dfcbceae",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'tuple' object has no attribute 'split'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[45]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m courses_list:\n\u001b[32m      5\u001b[39m     y[c] = z\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m     z[\u001b[33m\"\u001b[39m\u001b[33ml\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[38;5;28mtuple\u001b[39m(\u001b[38;5;28;43mtuple\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcourse_name\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[43m==\u001b[49m\u001b[43m \u001b[49m\u001b[43mc\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mlecture\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43msplit\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m/\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m:\u001b[49m\u001b[32;43m3\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m.\u001b[49m\u001b[43msplit\u001b[49m(\u001b[33m\"\u001b[39m\u001b[33m_\u001b[39m\u001b[33m\"\u001b[39m))\n\u001b[32m      7\u001b[39m     z[\u001b[33m\"\u001b[39m\u001b[33mt\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[38;5;28mtuple\u001b[39m(\u001b[38;5;28mtuple\u001b[39m(\u001b[38;5;28mstr\u001b[39m(df[df[\u001b[33m\"\u001b[39m\u001b[33mcourse_name\u001b[39m\u001b[33m\"\u001b[39m] == c][\u001b[33m\"\u001b[39m\u001b[33mlecture\u001b[39m\u001b[33m\"\u001b[39m]).split(\u001b[33m\"\u001b[39m\u001b[33m/\u001b[39m\u001b[33m\"\u001b[39m))[\u001b[32m0\u001b[39m:\u001b[32m3\u001b[39m].split(\u001b[33m\"\u001b[39m\u001b[33m_\u001b[39m\u001b[33m\"\u001b[39m))\n\u001b[32m      8\u001b[39m     z[\u001b[33m\"\u001b[39m\u001b[33mp\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[38;5;28mtuple\u001b[39m(\u001b[38;5;28mtuple\u001b[39m(\u001b[38;5;28mstr\u001b[39m(df[df[\u001b[33m\"\u001b[39m\u001b[33mcourse_name\u001b[39m\u001b[33m\"\u001b[39m] == c][\u001b[33m\"\u001b[39m\u001b[33mlecture\u001b[39m\u001b[33m\"\u001b[39m]).split(\u001b[33m\"\u001b[39m\u001b[33m/\u001b[39m\u001b[33m\"\u001b[39m))[\u001b[32m0\u001b[39m:\u001b[32m3\u001b[39m].split(\u001b[33m\"\u001b[39m\u001b[33m_\u001b[39m\u001b[33m\"\u001b[39m))\n",
-      "\u001b[31mAttributeError\u001b[39m: 'tuple' object has no attribute 'split'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Hard Constraint 5(Time conflicts)\n",
+    "def normalize_and_pad(slot_str):\n",
+    "    # Split the slot string into individual slots (ignore \"NONE\")\n",
+    "    if slot_str == \"NONE\":\n",
+    "        slot_list = []\n",
+    "    else:\n",
+    "        slot_list = [slot.split(\"_\") for slot in slot_str.split(\"/\")]\n",
+    "\n",
+    "    # Normalize slot to 3 elements each\n",
+    "    normalized = [\n",
+    "        tuple(parts + [None] * (3 - len(parts)))   # pad inside tuple\n",
+    "        for parts in slot_list\n",
+    "    ]\n",
+    "\n",
+    "    # Pad L/T/P to always have exactly 3 slots\n",
+    "    while len(normalized) < 3:\n",
+    "        normalized.append((None, None, None))\n",
+    "\n",
+    "    # Trim in case there are more than 3 slots\n",
+    "    return tuple(normalized[:3])\n",
+    "\n",
+    "\n",
     "y = {}\n",
-    "z = {}\n",
+    "\n",
     "for c in courses_list:\n",
-    "    y[c] = z\n",
-    "    z[\"l\"] = tuple(tuple(str(df[df[\"course_name\"] == c][\"lecture\"]).split(\"/\"))[i].split(\"_\") )\n",
-    "    z[\"t\"] = tuple(tuple(str(df[df[\"course_name\"] == c][\"lecture\"]).split(\"/\"))[0:3].split(\"_\"))\n",
-    "    z[\"p\"] = tuple(tuple(str(df[df[\"course_name\"] == c][\"lecture\"]).split(\"/\"))[0:3].split(\"_\"))\n",
+    "    row = df[df[\"course_name\"] == c].iloc[0]\n",
     "\n",
+    "    y[c] = {\n",
+    "        \"l\": normalize_and_pad(row[\"lecture\"]),\n",
+    "        \"t\": normalize_and_pad(row[\"tutorial\"]),\n",
+    "        \"p\": normalize_and_pad(row[\"practical\"])\n",
+    "    }\n",
+    "    \n",
+    "LTP = (\"l\", \"t\", \"p\")\n",
     "\n",
-    "\n",
-    "LTP = (\"l\", \"t\" ,\"p\")\n",
-    "for a in courses_list:\n",
-    "    for b in courses_list:\n",
-    "        for i in range(3):\n",
-    "            for j in range(3):\n",
-    "                for k in LTP:\n",
-    "                    for m in LTP:\n",
-    "                        if y[a][m][i][0] == y[b][k][j][0] and m!=k and i!=j and a!=b:\n",
-    "                            if y[a][m][i][1] < y[b][k][j][2] or y[b][k][j][1] < y[a][m][i][2] or y[a][m][i][1] == y[b][k][j][1]:\n",
+    "for a in courses_list: \n",
+    "    for b in courses_list: \n",
+    "        for i in range(3): \n",
+    "            for j in range(3): \n",
+    "                for k in LTP: \n",
+    "                    for m in LTP: \n",
+    "                        if y[a][m][i][0] == y[b][k][j][0] and m!=k and i!=j and a!=b and y[a][m][i][0] != None: \n",
+    "                            if y[a][m][i][1] < y[b][k][j][2] or y[b][k][j][1] < y[a][m][i][2] or y[a][m][i][1] == y[b][k][j][1]: \n",
     "                                model.Add(x[a,s] + x[b,s] <= 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "7386f571",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Hard Constraint 5(Electives)\n",
-    "eldf = pd.red_csv(\"electives_catalog.csv\")\n",
+    "eldf = pd.read_csv(\"electives_catalog.csv\")\n",
     "\n",
     "for s in range(5,9):\n",
     "    model.Add(sum(x[(c,s)] for c in eldf[\"open_electives\"].to_list()) == 1)\n",
